# lidar_paper

./: .gitignore  Dynamic_count_1.txt  Dynamic_count_1.txt2  Dynamic_count_2.txt  Dynamic_count_3.txt  Dynamic_count_4.txt  Dynamic_count_5.txt  dynamic_final_count_1.txt  dynamic_final_count_2.txt  fixed_count_1.txt  fixed_count_2.txt  fixed_count_3.txt  fixed_count_4.txt  fixed_count_5.txt  fixed_final_count_1.txt  fixed_final_count_2.txt  fixed_opr_2.txt  fixed_opr_3.txt  fixed_opr_4.txt  fixed_opr_5.txt  fixed_timer_2.txt  lidar_count_1.txt  lidar_count_2.txt  lidar_count_3.txt  lidar_count_4.txt  lidar_fixed_opr_1.txt  lidar_opr_1.txt  lidar_opr_2.txt  lidar_opr_3.txt  lidar_opr_4.txt  lidar_opr_5.txt  lidar_projection_opr_1.txt  path_with_mode.csv  projection_timer_1.txt  projection_timer_2.txt  segments.yaml  waypoint_count_1.txt  waypoint_count_2.txt  waypoint_count_3.txt  waypoint_count_4.txt  (+6 more)
src/: ROI_Table_Result_2.csv  ROI_Table_Result_5.csv  ROI_Table_final_Result_2.csv  dynamic_roi_filter_segment_yaml.py  graph.py  make_segments_from_csv.py  p.py  path_loader.py  path_maker.py  path_pursuit.py  path_record_with_mode.py  qwer.py  table.py
src/yolopv2_ros/: CMakeLists.txt  package.xml
src/yolopv2_ros/scripts/: mask.py  mask_timer.py  mask_timer_1.txt  mask_timer_2.txt
src/yolopv2_ros/scripts/YOLOPv2/: YOLOP.py  ros_yolopv2_roadmask.py  yolo_obstacle.py  yolop_lidar_fusion.py  yolop_lidar_fusion2.py  yolop_masking.py
src/yolopv2_ros/src/: fixed_timer.cpp  lidar_fixed_roi.cpp  lidar_projection.cpp  lidar_waypoint.cpp  projection_timer.cpp  waypoint_timer.cpp
