<?xml version="1.0"?>
<package format="2">
  <name>yolopv2_ros</name>
  <version>0.0.0</version>
  <description>The yolopv2_ros package for LiDAR-camera fusion</description>
  <maintainer email="autonav@todo.todo">autonav</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>message_filters</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_sensor_msgs</depend>
  <depend>tf2_eigen</depend>
  <depend>morai_msgs</depend>
</package>